@@ -1,3 +1,8 @@
+2018-12-27  Zhijin Li  <jonathan.zj.lee@gmail.com>
+
+	* .emacs: Add js2-mode for javascript and web-mode for html/jsx
+	templating.
+
 2018-12-26  Zhijin Li  <jonathan.zj.lee@gmail.com>
 
 	* .emacs.d/insert-header.el: Modify comment alist to rely on
